--- a/module3_solution/css/styles.css
+++ b/module3_solution/css/styles.css
@@ -5,6 +5,10 @@ body {
   font-family: "Oxygen", sans-serif;
 }
 
+/* h1 {
+  margin: 20px;
+} */
+
 /* HEADER */
 
 #header-nav {
@@ -21,13 +25,14 @@ body {
 .navbar-brand h1 {
   font-family: "Lora", serif;
   color: #000000;
-  font-size: 1.5em;
+  font-size: 1.8em;
   text-transform: uppercase;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
+  text-shadow: 1px 1px 1px #969494;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
+  float: left;
 }
 
 .navbar-brand a:hover,
@@ -46,13 +51,9 @@ body {
   vertical-align: middle;
 }
 
-#main-content {
-  background-color: rgb(119, 117, 117);
-  border: 1px solid #222;
-}
-
 #nav-list {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #nav-list a {
@@ -78,13 +79,23 @@ body {
   margin-top: -30px;
 }
 
+.menu-item {
+  background-color: #969494;
+  border: 1px solid #222;
+  margin-top: 50px;
+}
+
+#main-content {
+  margin-bottom: 50px;
+}
+
 .container .p {
-  margin-top: 30px;
+  margin-top: 50px;
   padding: 0;
   height: 1500px;
   border: 2px solid #222;
   width: 100%;
-  background-color: #222;
+  /* background-color: rgb(211, 211, 211); */
 }
 
 /* MEDIA QUERIES */
@@ -93,27 +104,6 @@ body {
   .container .jumbotron {
     background: url("../images/jumbotron_1200.jpg") no-repeat;
     height: 675px;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199px) {
-  #logo-img {
-    background: url(../images/restaurant-logo_medium.png) no-repeat;
-    width: 100px;
-    height: 100px;
-    margin: 5px 5px 5px 0;
-  }
-
-  .container .jumbotron {
-    background: url("../images/jumbotron_992.jpg") no-repeat;
-    height: 558px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .container .jumbotron {
-    background: url("../images/jumbotron_768.jpg") no-repeat;
-    height: 432px;
   }
 }
 
@@ -149,66 +139,7 @@ body {
     margin-right: 5px;
   }
 
-  .container .p {
-    margin-top: 150px;
-    padding: 0;
-    height: 1500px;
-    border: 2px solid #222;
-    width: 100%;
-    background-color: #222;
-  }
-
-  #menu-tile,
-  #specials-tile {
-    width: 360px;
-    margin: 0 auto 15px;
-  }
-
-  .panel-footer section {
-    margin-bottom: 30px;
-    text-align: center;
-  }
-
-  .panel-footer section:nth-child(3) {
-    margin-bottom: 0;
-  }
-
-  .panel-footer section hr {
-    width: 50%;
-  }
-
-  .menu-item-photo {
-    margin-right: auto;
-  }
-
-  .menu-item-tile .menu-item-price {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-
-  .menu-item-description {
-    text-align: center;
-  }
-}
-
-@media (max-width: 479px) {
-  .navbar-brand h1 {
-    padding-top: 5px;
-    font-size: 5vw;
-  }
-
-  #menu-tile,
-  #specials-tile {
-    width: 280px;
-    margin: 0 auto 15px;
-  }
-
-  .col-xxs-12 {
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    float: left;
-    width: 100%;
+  .container {
+    margin-top: 50px;
   }
 }
